# python_project_sample

./: .pre-commit-config.yaml  Makefile  Pipfile  README.md  pyproject.toml  setup.cfg
functions/: sample.py
src/: sample.py
