[tool.poetry]
name = "python_project_sample"
version = "0.1.0"
description = ""
authors = ["shuntaka9576 <shuntaka9576@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.1.2"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
mypy = "^0.761"
flake8 = "^3.7.9"

[tool.black]

[tool.isort]
include_trailing_comma = true
line_length = 88
multi_line_output = 3

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

